# service/src/main/java/dk/kvalitetsit/hjemmebehandling/api/BaseDto.java
@@ -1,25 +1,0 @@
-package dk.kvalitetsit.hjemmebehandling.api;
-
-import io.swagger.v3.oas.annotations.media.Schema;
-
-public abstract class BaseDto {
-    private String id;
-    private String organizationId;
-
-    @Schema(required = true, description = "Id of the resource", example = "CarePlan/10")
-    public String getId() {
-        return id;
-    }
-
-    public void setId(String id) {
-        this.id = id;
-    }
-
-    public String getOrganizationId() {
-        return organizationId;
-    }
-
-    public void setOrganizationId(String organizationId) {
-        this.organizationId = organizationId;
-    }
-}
