# service/src/main/java/dk/kvalitetsit/hjemmebehandling/api/QuestionnaireResponseDto.java
@@ -1,91 +1,0 @@
-package dk.kvalitetsit.hjemmebehandling.api;
-
-import dk.kvalitetsit.hjemmebehandling.constants.ExaminationStatus;
-import dk.kvalitetsit.hjemmebehandling.constants.TriagingCategory;
-
-import java.time.Instant;
-import java.util.List;
-
-public class QuestionnaireResponseDto extends BaseDto {
-    private String questionnaireId;
-    private String carePlanId;
-    private String questionnaireName;
-    private List<QuestionAnswerPairDto> questionAnswerPairs;
-    private Instant answered;
-    private ExaminationStatus examinationStatus;
-    private Instant examined;
-    private TriagingCategory triagingCategory;
-    private PatientDto patient;
-
-    public String getQuestionnaireId() {
-        return questionnaireId;
-    }
-
-    public void setQuestionnaireId(String questionnaireId) {
-        this.questionnaireId = questionnaireId;
-    }
-
-    public String getCarePlanId() {
-        return carePlanId;
-    }
-
-    public void setCarePlanId(String carePlanId) {
-        this.carePlanId = carePlanId;
-    }
-
-    public String getQuestionnaireName() {
-        return questionnaireName;
-    }
-
-    public void setQuestionnaireName(String questionnaireName) {
-        this.questionnaireName = questionnaireName;
-    }
-
-    public List<QuestionAnswerPairDto> getQuestionAnswerPairs() {
-        return questionAnswerPairs;
-    }
-
-    public void setQuestionAnswerPairs(List<QuestionAnswerPairDto> questionAnswerPairs) {
-        this.questionAnswerPairs = questionAnswerPairs;
-    }
-
-    public Instant getAnswered() {
-        return answered;
-    }
-
-    public void setAnswered(Instant answered) {
-        this.answered = answered;
-    }
-
-    public ExaminationStatus getExaminationStatus() {
-        return examinationStatus;
-    }
-
-    public void setExaminationStatus(ExaminationStatus examinationStatus) {
-        this.examinationStatus = examinationStatus;
-    }
-
-    public Instant getExamined() {
-        return examined;
-    }
-
-    public void setExamined(Instant examined) {
-        this.examined = examined;
-    }
-
-    public TriagingCategory getTriagingCategory() {
-        return triagingCategory;
-    }
-
-    public void setTriagingCategory(TriagingCategory triagingCategory) {
-        this.triagingCategory = triagingCategory;
-    }
-
-    public PatientDto getPatient() {
-        return patient;
-    }
-
-    public void setPatient(PatientDto patient) {
-        this.patient = patient;
-    }
-}
